# lucid

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitlab-ci.yml  CPPLINT.cfg  Dockerfile  LICENCE  MODULE.bazel  README.md  overtaking.yaml  pyproject.toml  run.sh  setup.py
bindings/jslucid/: BUILD.bazel  jslucid.cpp
bindings/pylucid/: BUILD.bazel  __init__.py  __main__.py  _doxygen_docstring_extractor.py  _stubgen.py  cli.py  cliargs_schema.json  configuration_schema.json  constants.cpp  dreal.py  ext.py  gui.py  gurobi.cpp  interrupt.cpp  interrupt.h  math.cpp  model.cpp  parser.py  pipeline.py  plot.py  pylucid.cpp  pylucid.h  util.cpp  util.py  verification.cpp
bindings/pylucid/ARCH25 scripts/: AS - Automated anaesthesia.py
bindings/pylucid/examples/: test_vp_pso.py
docs/: Architecture.md  ArchitectureIdea.md  BUILD.bazel  Bindings.md  Changelog.md  Configuration.md  Contributing.md  Design.md  FAQ.md  Features.md  Installation.md  Legend.md  Pylucid.md  Testing.md  Todo.md
docs/_static/: doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-tabs.js  doxygen-awesome.css  footer.html  header.html  highlight.min.css  mermaid.dist.js  plotly.js  style.css
docs/filters/: markdown.sh
docs/paper/: aaai25.bib  appendix.tex  glossary.tex  iPython.tex  main.tex  old_main.tex  old_resources.bib  resources.bib  setup.tex  shader.tex
docs/paper/code/: barrier2.yaml  barrier3.yaml  configuration.json  configuration.py  configuration.sh  configuration.yaml  example.py  example.yaml  linear.py  linear.yaml  overtaking.yaml
docs/paper/fig/: architecture.tex  barrier3.pgf  steps.tex
docs/paper/figures/: architecture.tex  barrier2.eps  barrier3.pgf  contour-overtaking.pgf  example.pgf  linear.eps  linear.pgf  model-barrier2-noise.pgf  model-barrier2.pgf  model-barrier3-noise.pgf  model-barrier3.pgf  model-overtaking.pgf  steps.tex
docs/paper/reproducibility checklist/: ReproducibilityChecklist.tex
frontend/: BUILD.bazel  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: App.tsx  (+24 more)
lucid/: BUILD.bazel  lucid.h  main.cpp  temp.hops.cpp
lucid/benchmark/: BUILD.bazel  Generator.cpp  Generator.h  InitBarr3Generator.cpp  InitBarr3Generator.h  InitBarr3Scenario.cpp  InitBarr3Scenario.h  Scenario.cpp  Scenario.h  benchmark.h
lucid/lib/: BUILD.bazel  alglib.cpp  alglib.h  eigen.cpp  eigen.h  eigen_extension.h  eigen_matrix_base_plugin.h  gurobi.cpp  gurobi.h  hexaly.h  highs.h  pocketfft.h  psocpp.h  soplex.h
lucid/math/: BUILD.bazel  ConstantTruncatedFourierFeatureMap.cpp  ConstantTruncatedFourierFeatureMap.h  Estimator.cpp  Estimator.h  FeatureMap.cpp  FeatureMap.h  GaussianKernel.cpp  GaussianKernel.h  GramMatrix.cpp  GramMatrix.h  GurobiLinearOptimiser.cpp  GurobiLinearOptimiser.h  InverseGramMatrix.cpp  InverseGramMatrix.h  Kernel.cpp  Kernel.h  KernelHyperParameter.cpp  KernelHyperParameter.h  KernelParameter.cpp  KernelParameter.h  KernelRidgeRegression.cpp  KernelRidgeRegression.h  KernelRidgeRegressor.cpp  KernelRidgeRegressor.h  LinearTruncatedFourierFeatureMap.cpp  LinearTruncatedFourierFeatureMap.h  LogTruncatedFourierFeatureMap.cpp  LogTruncatedFourierFeatureMap.h  MultiSet.cpp  MultiSet.h  Parameter.cpp  Parameter.h  ParameterValue.cpp  ParameterValue.h  ParameterValues.cpp  ParameterValues.h  Parametrizable.cpp  Parametrizable.h  RectSet.cpp  (+15 more)
lucid/model/: BUILD.bazel  ConstantTruncatedFourierFeatureMap.cpp  ConstantTruncatedFourierFeatureMap.h  CrossValidator.cpp  CrossValidator.h  EllipseSet.cpp  EllipseSet.h  Estimator.cpp  Estimator.h  FeatureMap.cpp  FeatureMap.h  GaussianKernel.cpp  GaussianKernel.h  GradientOptimizable.cpp  GradientOptimizable.h  GramMatrix.cpp  GramMatrix.h  GridSearchTuner.cpp  GridSearchTuner.h  InverseGramMatrix.cpp  InverseGramMatrix.h  KFold.cpp  KFold.h  Kernel.cpp  Kernel.h  KernelRidgeRegressor.cpp  KernelRidgeRegressor.h  LbfgsTuner.cpp  LbfgsTuner.h  LeaveOneOut.cpp  LeaveOneOut.h  LinearTruncatedFourierFeatureMap.cpp  LinearTruncatedFourierFeatureMap.h  LogTruncatedFourierFeatureMap.cpp  LogTruncatedFourierFeatureMap.h  MedianHeuristicTuner.cpp  MedianHeuristicTuner.h  ModelEstimator.cpp  ModelEstimator.h  MultiSet.cpp  (+28 more)
lucid/symbolic/: BUILD.bazel
lucid/tuning/: BUILD.bazel  LbfgsOptimiser.cpp  LbfgsOptimiser.h  LbfgsTuner.cpp  LbfgsTuner.h  MedianHeuristicOptimiser.cpp  MedianHeuristicOptimiser.h  MedianHeuristicTuner.cpp  MedianHeuristicTuner.h  Optimiser.cpp  Optimiser.h  Tuner.cpp  Tuner.h  tuning.h
lucid/util/: BUILD.bazel  Configuration.cpp  Configuration.h  IndexIterator.cpp  IndexIterator.h  ScopedValue.h  SelfReferenceCountingObject.h  Stats.cpp  Stats.h  Tensor.cpp  Tensor.h  TensorIterator.cpp  TensorIterator.h  TensorView.cpp  TensorView.h  Timer.cpp  Timer.h  concept.h  constants.h  definitions.h  error.h  exception.h  hash.h  intrusive_ptr.h  logging.cpp  logging.h  math.h  matplotlib.cpp  matplotlib.h  matplotlibcpp.cpp  matplotlibcpp.h  metrics.cpp  metrics.h  random.cpp  random.h  util.h
lucid/verification/: AlglibOptimiser.cpp  AlglibOptimiser.h  BUILD.bazel  BarrierCertificate.cpp  BarrierCertificate.h  FourierBarrierCertificate.cpp  FourierBarrierCertificate.h  GurobiLinearOptimiser.cpp  GurobiLinearOptimiser.h  GurobiOptimiser.cpp  GurobiOptimiser.h  HexalyOptimiser.cpp  HexalyOptimiser.h  HighsOptimiser.cpp  HighsOptimiser.h  MontecarloSimulation.cpp  MontecarloSimulation.h  Optimiser.cpp  Optimiser.h  PsoParameters.cpp  PsoParameters.h  SoplexOptimiser.cpp  SoplexOptimiser.h  verification.h
tests/integration/: BUILD.bazel  TestInitBarrier3.cpp  TestInitCSOvertaking.cpp  TestLinear.cpp
tools/: BUILD.bazel  bash_autocomplete.py  cpplint.bzl  generate_version_header.bat  generate_version_header.sh  git_archive.bzl  gurobi_build.bzl  gurobi_repository.bzl  hexaly_repository.bzl  ignore_includes.json  local_repository.bzl  make_var_substitution.bzl  pytest.bzl  pytest_main.py  requirements.txt  rules_cc.bzl  rules_py_cc.bzl  variables.bzl
(+767 files in other folders)
