"""lucid module"""

module(name = "lucid")

#################################################################################
# Available dependencies from the Bazel registry (https://registry.bazel.build/)
#################################################################################

# Apache License 2.0 | rules_cc for building C++ libraries with Bazel
bazel_dep(name = "rules_cc", version = "0.1.1")

# Apache License 2.0 | utility rules for Bazel
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Apache License 2.0 | rules housing all canonical settings for cross-platform builds
bazel_dep(name = "platforms", version = "0.0.11")

# Mozilla Public License 2.0 | C++ library that handles matrices and vectors
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")

# MIT | argparse implementation for modern C++
bazel_dep(name = "argparse", version = "3.0.0")

# MIT | C++ library for formatting text
bazel_dep(name = "fmt", version = "10.2.1")

# MIT | logging library
bazel_dep(name = "spdlog", version = "1.15.2")

# https://www.boost.org/users/license.html | Boost C++ Libraries for math
bazel_dep(name = "boost.math", version = "1.87.0")

# Apache License 2.0 | rules_python for building python targets
bazel_dep(name = "rules_python", version = "1.3.0")

# https://github.com/pybind/pybind11_bazel/blob/master/LICENSE | pybind11 for binding C++ and Python
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# Apache License 2.0 | Bazel rules for packaging the project
bazel_dep(name = "rules_pkg", version = "1.1.0")

# https://github.com/cpplint/cpplint/blob/develop/LICENSE | Google C++ Style Guide
bazel_dep(name = "cpplint", version = "2.0.0", dev_dependency = True)

# BSD-3-Clause license | C++ test suite by Google
bazel_dep(name = "googletest", version = "1.16.0", dev_dependency = True)

# Apache License 2.0 | Doxygen documentation generator
bazel_dep(name = "rules_doxygen", version = "2.2.1", dev_dependency = True)

# MIT | rules for dealing with target dependencies
bazel_dep(name = "depend_on_what_you_use", version = "0.8.0", dev_dependency = True)

#################################################################################
# External dependencies not available in the Bazel registry
#################################################################################

# Gurobi installation. Must be already installed on the system.

gurobi_repository = use_repo_rule("//tools:gurobi_build.bzl", "gurobi_repository")

gurobi_repository(
    name = "gurobi",
    build_file = "//third_party:gurobi.BUILD.bazel",
    default_gurobi_home = "/opt/gurobi1201/linux64", # Replace with your Gurobi installation path. It will be used if the environment variable GUROBI_HOME is not set.
)

# GitHub repositories

github_archive = use_repo_rule("//tools:git_archive.bzl", "github_archive")

# MIT | logging library
github_archive(
    name = "lbfgscpp",
    build_file = "//third_party:lbfgscpp.BUILD.bazel",
    commit = "9db7a6d05042cc72851ed6c5e2cd34a0356b7150",
    repository = "yixuan/LBFGSpp",
    sha256 = "f3423ddeaed9642959b45d06cad6433444a31a2e21594825a09b914c2794cdac",
)

# MIT | logging library
github_archive(
    name = "pocketfft",
    build_file = "//third_party:pocketfft.BUILD.bazel",
    commit = "0fa0ef591e38c2758e3184c6c23e497b9f732ffa",
    repository = "mreineck/pocketfft",
    sha256 = "1cfd0494ac6fe88e034579cb655b0ef9731b39a0432558e50fe41c4abd6d8684",
)

#################################################################################
# Load module extensions
#################################################################################
doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
use_repo(doxygen_extension, "doxygen")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.8",
)
python.toolchain(
    python_version = "3.9",
)
python.toolchain(
    is_default = True,
    python_version = "3.10",
)
python.toolchain(
    python_version = "3.11",
)
python.toolchain(
    python_version = "3.12",
)
python.toolchain(
    python_version = "3.13",
)
use_repo(
    python,
    "python_3_10",
    "python_3_11",
    "python_3_12",
    "python_3_13",
    "python_3_8",
    "python_3_9",
    "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.8",
    requirements_lock = "//tools:requirements.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.9",
    requirements_lock = "//tools:requirements.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//tools:requirements.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//tools:requirements.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//tools:requirements.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//tools:requirements.txt",
)
use_repo(pip, "pypi")
