[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylucid"
readme = "README.md"
authors = [
    { name = "Ernesto Casablanca", email = "casablancaernesto@gmail.com" },
    { name = "Oliver Schon", email = "o.schoen2@newcastle.ac.uk" },
]
maintainers = [
    { name = "Ernesto Casablanca", email = "casablancaernesto@gmail.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["LICEN[CS]E*"]
keywords = ["neural network", "kernel"]
requires-python = ">= 3.8"
dependencies = ["numpy<=2.2.5", "pyparsing<=3.2.3", "sympy<=1.14.0"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://tendto.github.io/lucid/"
Documentation = "https://tendto.github.io/lucid/"
Repository = "https://github.com/TendTo/lucid.git"
Issues = "https://github.com/TendTo/lucid/issues"
Changelog = "https://github.com/TendTo/lucid/blob/main/docs/Changelog.md"

[project.optional-dependencies]
verification = ["dreal"]
plot = ["matplotlib"]

[project.scripts]
pylucid = "pylucid.__main__:main"

[tool.setuptools]
packages = []

# Black configuration (code formatter)
[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
line-length = 120
include = '(bindings/pylucid|tests/bindings/pylucid)\/.*\.py'

# Isort configuration (import sorter)
[tool.isort]
profile = "black"
