load("@doxygen//:doxygen.bzl", "doxygen")
load("//tools:rules_cc.bzl", "LUCID_DESCRIPTION", "LUCID_NAME", "LUCID_VERSION")

doxygen(
    name = "docs",
    srcs = [
        "//:README.md",
        "//lucid:all_srcs",
    ] + glob([
        "_static/*",
        "filters/*",
        "*.md",
    ]),
    aliases = [
        # Header
        "licence=@par Licence:^^",
        # Math
        "X=@f$ \\texttip{\\mathcal{X}}{Polish sample vector space} @f$",
        "x=@f$ x @f$",
        "n=@f$ n @f$",
        "N=@f$ N @f$",
        "U=@f$ \\mathcal{U} @f$",
        "nvector=@f$ n @f$ dimensional vector",
        "fx=@f$ f(x) @f$",
        "nxm=@f$ n \\times m @f$",
        "nxn=@f$ n \\times m @f$",
        "Nxn=@f$ N \\times n @f$",
        # Method descriptors
        "constructor{1}=Construct a new \\1 object.^^",
        "getter{2}=Get read-only access to the \\1 of the \\2.^^@return \\1 of the \\2^^",
        "getter{3}=Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^",
        "getter{4}=Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^",
        "checker{2}=Check whether the \\2 is \\1.^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^",
        "checker{3}=Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^",
        "checker{4}=Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^@see \\4^^",
        "getsetter{2}=Get read-write access to the \\1 of the \\2.^^@return \\1 of the \\2^^",
        "getsetter{3}=Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^",
        "getsetter{4}=Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^",
        "less{1}=Compare two \\1 to determine the order between them.^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^",
        "less{2}=Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^",
        "less{3}=Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^@see \\3^^",
        "equal_to{1}=Compare two \\1 to determine if they are equal.^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^",
        "equal_to{2}=Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^",
        "equal_to{3}=Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^@see \\3^^",
        "hash{1}=Compute the hash of this \\1.^^",
        "hash{2}=Compute the hash of this \\1.^^^^\\2^^",
        "addref{1}=Method called by an intrusive_ptr every time a new pointer to this \\1 is created.^^^^It increases the number of references.^^",
        "release{1}=Method called by an intrusive_ptr every time a pointer to this \\1 is deleted.^^^^It decreases the number of references and deletes this object if the reference counter reaches 0.^^",
        # Mermaid support in docstrings
        "mermaid=^^<pre class='mermaid'>",
        "endmermaid=</pre>^^",
    ],
    builtin_stl_support = True,
    #    configurations = [
    #        "EXTRACT_ALL          = YES",
    #        "CLASS_DIAGRAMS       = YES",
    #        "HIDE_UNDOC_RELATIONS = NO",
    #        "HAVE_DOT             = YES",
    #        "CLASS_GRAPH          = YES",
    #        "COLLABORATION_GRAPH  = YES",
    #        "UML_LOOK             = YES",
    #        "UML_LIMIT_NUM_FIELDS = 50",
    #        "TEMPLATE_RELATIONS   = YES",
    #        "DOT_GRAPH_MAX_NODES  = 100",
    #        "MAX_DOT_GRAPH_DEPTH  = 0",
    #        "DOT_TRANSPARENT      = YES",
    #    ],
    disable_index = False,
    enable_preprocessing = True,
    example_path = "example",
    expand_as_defined = "TODO",
    expand_only_predef = True,
    extract_private = True,
    filter_patterns = ["*.md=bash docs/filters/markdown.sh"],
    full_sidebar = False,
    generate_treeview = True,
    have_dot = False,
    # have_dot = True,
    hide_in_body_docs = True,
    hide_undoc_members = True,
    html_colorstyle = "LIGHT",
    html_extra_files = [
        "docs/_static/doxygen-awesome-darkmode-toggle.js",
        "docs/_static/doxygen-awesome-fragment-copy-button.js",
        "docs/_static/doxygen-awesome-interactive-toc.js",
        "docs/_static/doxygen-awesome-paragraph-link.js",
        "docs/_static/doxygen-awesome-tabs.js",
        "docs/_static/mermaid.dist.js",
    ],
    html_extra_stylesheet = [
        "docs/_static/doxygen-awesome.css",
        "docs/_static/mermaid.css",
        "docs/_static/style.css",
    ],
    html_footer = "docs/_static/footer.html",
    html_header = "docs/_static/header.html",
    image_path = "docs/_static",
    javadoc_autobrief = True,
    macro_expansion = True,
    mathjax_version = "MathJax_3",
    project_brief = LUCID_DESCRIPTION,
    project_icon = "docs/_static/logo.svg",
    project_logo = "docs/_static/logo.svg",
    project_name = LUCID_NAME,
    project_number = LUCID_VERSION,
    references_link_source = False,
    source_browser = False,
    use_mathjax = True,
    use_mdfile_as_mainpage = "README.md",
    verbatim_headers = False,
)
