load("@doxygen//:doxygen.bzl", "doxygen")
load("//tools:variables.bzl", "LUCID_DESCRIPTION", "LUCID_NAME", "LUCID_VERSION")

doxygen(
    name = "docs",
    srcs = [
        "//:README.md",
        "//bindings/pylucid:configuration_schema.json",
        "//lucid:all_srcs",
    ] + glob(
        [
            "_static/*",
            "filters/*",
            "*.md",
        ],
        exclude = [
            "Todo.md",
        ],
    ),
    outs = [
        "html",
        "latex",
    ],
    aliases = [
        # Header
        "licence=@par Licence:^^",
        # Math
        "X=@f$ \\texttip{\\mathcal{X}}{Polish sample vector space} @f$",
        "Xu=@f$ \\texttip{\\mathcal{X}}{Usafe set}_u @f$",
        "X0=@f$ \\texttip{\\mathcal{X}}{Initial set}_0 @f$",
        "XsubRn=@f$ \\texttip{\\mathcal{X}}{Polish sample vector space} \\subseteq \\mathbb{R}^n @f$",
        "XsubRd=@f$ \\texttip{\\mathcal{X}}{Polish sample vector space} \\subseteq \\mathbb{R}^d @f$",
        "XsubRdx=@f$ \\texttip{\\mathcal{X}}{Polish sample vector space} \\subseteq \\mathbb{R}^{d_x} @f$",
        "YsubRdy=@f$ \\texttip{\\mathcal{Y}}{Polish sample vector space} \\subseteq \\mathbb{R}^{d_y} @f$",
        "H=@f$ \\mathcal{H} @f$",
        "x=@f$ \\texttip{x}{Element of the vector space} @f$",
        "y=@f$ \\texttip{y}{Element of the vector space} @f$",
        "x1=@f$ x_1 @f$",
        "x2=@f$ x_2 @f$",
        "xi=@f$ x_i @f$",
        "xn=@f$ x_n @f$",
        "d=@f$ \\texttip{d}{Dimension of the vector space} @f$",
        "n=@f$ n @f$",
        "N=@f$ N @f$",
        "nvector=@f$ n @f$ dimensional vector",
        "fx=@f$ f(x) @f$",
        "nxm=@f$ n \\times m @f$",
        "nxn=@f$ n \\times m @f$",
        "n1xd=@f$ \\texttip{n_1}{Number of samples in the first matrix} \\times \\texttip{d}{Dimension of the vector space} @f$",
        "n2xd=@f$ \\texttip{n_2}{Number of samples in the second matrix} \\times \\texttip{d}{Dimension of the vector space} @f$",
        "nxd=@f$ \\texttip{n}{Number of samples} \\times \\texttip{d}{Dimension of the vector space} @f$",
        "nxdx=@f$ \\texttip{n}{Number of samples} \\times \\texttip{d_x}{Dimension of the input vector space} @f$",
        "nxdy=@f$ \\texttip{n}{Number of samples} \\times \\texttip{d_y}{Dimension of the output vector space} @f$",
        "sigmal=@f$ \\sigma_l @f$",
        "sigmaf=@f$ \\sigma_f @f$",
        "gamma=@f$ \\gamma @f$",
        "lambda=@f$ \\lambda @f$",
        "mu=@f$ \\mu @f$",
        "rho=@f$ \\rho @f$",
        "theta=@f$ \\theta @f$",
        "eta=@f$ \\eta @f$",
        "epsilon=@f$ \\epsilon @f$",
        "phiMx=@f$ \\texttip{\\phi_M(x)}{Feature map considering M frequencies, including the 0th frequency} @f$",
        "phiMx_extended=@f[ \\phi_{M}(x) = \\sigma_{f}\\begin{bmatrix} w_{0}\\\\ \\sqrt{2}w_{1}\\cos(\\omega_{1}^{\\top}P(x))\\\\ \\sqrt{2}w_{1}\\sin(\\omega_{1}^{\\top}P(x))\\\\ \\vdots\\\\ \\sqrt{2}w_{M}\\cos(\\omega_{M}^{\\top}P(x))\\\\ \\sqrt{2}w_{M}\\sin(\\omega_{M}^{\\top}P(x)) \\end{bmatrix} @f]",
        # Method descriptors
        "constructor{1}=Construct a new \\1 object.^^",
        "getter{2}=Get read-only access to the \\1 of the \\2.^^@return \\1 of the \\2^^",
        "getter{3}=Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^",
        "getter{4}=Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^",
        "checker{2}=Check whether the \\2 is \\1.^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^",
        "checker{3}=Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^",
        "checker{4}=Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^@see \\4^^",
        "getsetter{2}=Get read-write access to the \\1 of the \\2.^^@return \\1 of the \\2^^",
        "getsetter{3}=Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^",
        "getsetter{4}=Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^",
        "less{1}=Compare two \\1 to determine the order between them.^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^",
        "less{2}=Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^",
        "less{3}=Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^@see \\3^^",
        "equal_to{1}=Compare two \\1 to determine if they are equal.^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^",
        "equal_to{2}=Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^",
        "equal_to{3}=Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^@see \\3^^",
        "hash{1}=Compute the hash of this \\1.^^",
        "hash{2}=Compute the hash of this \\1.^^^^\\2^^",
        "addref{1}=Method called by an intrusive_ptr every time a new pointer to this \\1 is created.^^^^It increases the number of references.^^",
        "release{1}=Method called by an intrusive_ptr every time a pointer to this \\1 is deleted.^^^^It decreases the number of references and deletes this object if the reference counter reaches 0.^^",
        "to_string=Obtain the string representation of this object.^^@return string representation of this object^^",
        # Mermaid support in docstrings
        "mermaid=^^<pre class='mermaid'>",
        "endmermaid=</pre>^^",
        # Plot support in docstrings
        "plot=^^<div data-plot='",
        "endplot='/>^^",
        # Tabs
        "tab{2|}=@htmlonly<li><span class='tab-title'>@endhtmlonly\\1@htmlonly</span>@endhtmlonly\\2@htmlonly</li>@endhtmlonly",
        "tab2{2||}=@tab{ \\1 | \\2 }",
        "tabs{1}=@htmlonly<div class='tabbed'><ul>@endhtmlonly\\1@htmlonly</ul></div>@endhtmlonly",
    ],
    builtin_stl_support = True,
    disable_index = False,
    enable_preprocessing = True,
    example_path = "example",
    exclude_symbols = ["*::internal::*"],
    expand_as_defined = [
        "TODO",
        "LUCID_CONSTEXPR_PARAMETER",
        "LUCID_CONST_PARAMETER",
    ],
    expand_only_predef = True,
    extra_packages = ["pmboxdraw"],
    extract_private = True,
    filter_patterns = ["*.md=bash docs/filters/markdown.sh"],
    full_sidebar = False,
    generate_latex = True,
    generate_treeview = True,
    have_dot = False,
    # have_dot = True,
    hide_in_body_docs = True,
    hide_undoc_members = True,
    html_colorstyle = "LIGHT",
    html_extra_files = [
        "bindings/pylucid/configuration_schema.json",
        "docs/_static/doxygen-awesome-darkmode-toggle.js",
        "docs/_static/doxygen-awesome-fragment-copy-button.js",
        "docs/_static/doxygen-awesome-interactive-toc.js",
        "docs/_static/doxygen-awesome-paragraph-link.js",
        "docs/_static/doxygen-awesome-tabs.js",
        "docs/_static/highlight.min.js",
        "docs/_static/mermaid.dist.js",
        "docs/_static/plotly.js",
        "docs/_static/plotly.min.js",
        "docs/_static/lucid-banner.png",
    ],
    html_extra_stylesheet = [
        "docs/_static/doxygen-awesome.css",
        "docs/_static/mermaid.css",
        "docs/_static/style.css",
        "docs/_static/highlight.min.css",
    ],
    html_footer = "docs/_static/footer.html",
    html_header = "docs/_static/header.html",
    image_path = "docs/_static",
    javadoc_autobrief = True,
    macro_expansion = True,
    #    configurations = [
    #        "EXTRACT_ALL          = YES",
    #        "CLASS_DIAGRAMS       = YES",
    #        "HIDE_UNDOC_RELATIONS = NO",
    #        "HAVE_DOT             = YES",
    #        "CLASS_GRAPH          = YES",
    #        "COLLABORATION_GRAPH  = YES",
    #        "UML_LOOK             = YES",
    #        "UML_LIMIT_NUM_FIELDS = 50",
    #        "TEMPLATE_RELATIONS   = YES",
    #        "DOT_GRAPH_MAX_NODES  = 100",
    #        "MAX_DOT_GRAPH_DEPTH  = 0",
    #        "DOT_TRANSPARENT      = YES",
    #    ],
    markdown_id_style = "GITHUB",
    mathjax_version = "MathJax_3",
    page_outline_panel = False,
    project_brief = LUCID_DESCRIPTION,
    project_icon = "docs/_static/logo.svg",
    project_logo = "docs/_static/logo.svg",
    project_name = LUCID_NAME,
    project_number = LUCID_VERSION,
    references_link_source = False,
    source_browser = False,
    use_mathjax = True,
    use_mdfile_as_mainpage = "README.md",
    verbatim_headers = False,
)
